--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.3"
 polars = "^1.9.0"
+numba = "^0.60.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -20,9 +21,9 @@ ruff = "^0.6.9"
 pytest-mock = "*"
 pre-commit = "^4.0.1"
 
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-
+[tool.pytest.ini_options]
+pythonpath = ["."]
