Add type checker to the build pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,10 @@ jobs:
     - name: Lint with ruff
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        poetry run ruff check 
-        
+        poetry run ruff check
+
     - name: Run tests
       run: poetry run pytest
+
+    - name: Validate Type Correctness
+      run: poetry run pyright -p pyproject.toml .
