--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,35 +4,18 @@ on:
   push:
     branches: [ "main", "gh_pages"]
 
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v1
-    # Standard drop-in approach that should work for most people.
-    - uses: ammaraskar/sphinx-action@master
+  deploy:
+  runs-on: ubuntu-latest
+  needs: build  # Ensure that the build job is completed before deploying
+  steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+    - name: Upload Documentation Artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        docs-folder: "docs/"
-
-    # Publish built docs to gh-pages branch.
-    # ===============================
-    - name: Commit documentation changes
-      run: |
-        git clone ${{ github.server_url }}/${{ github.repository }} --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
-        cd gh-pages
-        touch .nojekyll
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation" -a || true
-        # The above command will fail if no changes were present, so we ignore
-        # that.
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        branch: gh-pages
-        directory: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        path: './docs/_build/html/*'  # Path to the built HTML documentation
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
