--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,18 +4,29 @@ on:
   push:
     branches: [ "main", "gh_pages"]
 
-  deploy:
-  runs-on: ubuntu-latest
-  needs: build  # Ensure that the build job is completed before deploying
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
-    - name: Upload Documentation Artifact
-      uses: actions/upload-pages-artifact@v3
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    # Standard drop-in approach that should work for most people.
+    - uses: ammaraskar/sphinx-action@master
       with:
-        path: './docs/_build/html/*'  # Path to the built HTML documentation
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+        docs-folder: "docs/"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # Ensure that the build job is completed before deploying
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload Documentation Artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './docs/_build/html/*'  # Path to the built HTML documentation
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
