--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload Documentation Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs/_build/html/*'  # Path to the built HTML documentation
+          path: './docs/build/html/*'  # Path to the built HTML documentation
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
