--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,31 +2,18 @@ name: Documentation
 
 on:
   push:
-    branches: [ "main", "gh_pages"]
+    branches: [ "main"]
+
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  pages:
+    runs-on: ubuntu-20.04
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
     steps:
-    - uses: actions/checkout@v1
-    # Standard drop-in approach that should work for most people.
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs/"
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build  # Ensure that the build job is completed before deploying
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload Documentation Artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './docs/build/html/*'  # Path to the built HTML documentation
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    - id: deployment
+      uses: sphinx-notes/pages@v3
