Implement correlation coef function

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,9 @@
 				"ms-python.python",
 				"ms-python.debugpy",
 				"tamasfe.even-better-toml",
-				"charliermarsh.ruff"
+				"charliermarsh.ruff",
+				"ms-toolsai.jupyter",
+				"ms-toolsai.jupyter-renderers"
 			]
 		}
 	},
