--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ python = "^3.10"
 pandas = "^2.2.3"
 polars = "^1.9.0"
 numba = "^0.60.0"
-pyright = "^1.1.384"
+
+
 
 [tool.poetry.group.dev]
 optional = true
@@ -22,7 +23,12 @@ ruff = "^0.6.9"
 pytest-mock = "*"
 pre-commit = "^4.0.1"
 sphinx = "^8.1.3"
+pyright = "^1.1.384"
 
+
+[tool.poetry.group.research.dependencies]
+seaborn = "^0.13.2"
+ipykernel = "^6.29.5"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
