--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ ruff = "^0.6.9"
 pytest-mock = "*"
 pre-commit = "^4.0.1"
 sphinx = "^8.1.3"
+sphinx-rtd-theme = "^3.0.1"
 
 
 [tool.pytest.ini_options]
