--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,6 +17,7 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	rm -f $(SOURCEDIR)/index.rst
 	rm -f $(SOURCEDIR)/generated/*
 	rm -rf $(SOURCEDIR)/_build/*
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
