--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,8 @@ jobs:
       pages: write
       id-token: write
     steps:
+    - id: install_dev_deps
+      run: poetry install --with dev
     - id: deployment
       uses: sphinx-notes/pages@v3
       with:
