--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,24 @@ pyright = "^1.1.384"
 [tool.poetry.group.dev]
 optional = true
 
+[tool.poetry.group.docs]
+optional = true
+
+
 [tool.poetry.group.dev.dependencies]
+pytest = "^6.0.0"
+ruff = "^0.6.9"
+pytest-mock = "*"
+pre-commit = "^4.0.1"
+
+[tool.poetry.group.docs.dependencies]
 pytest = "^6.0.0"
 ruff = "^0.6.9"
 pytest-mock = "*"
 pre-commit = "^4.0.1"
 sphinx = "^8.1.3"
 sphinx-rtd-theme = "^3.0.1"
+
 
 
 [tool.pytest.ini_options]
