--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ pre-commit = "^4.0.1"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
-[tool.pyright]
+[tool.pylance]
 ignore = [
     "**/typings",
     '.cache/*',
