Add pricing stuff to pqf

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,10 @@
 FROM  mcr.microsoft.com/devcontainers/python:1-3.11-bullseye
 
-RUN apt-get update && \  
+RUN apt-get update && \
     apt-get install -y curl && \
     apt-get clean
 
 RUN python3 -m pip install --user pipx && \
     python3 -m pipx ensurepath
 
-RUN pipx ensurepath --global
-
-RUN pipx install poetry
-
-RUN poetry completions bash >> ~/.bash_completion
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
