--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,4 +7,4 @@ RUN apt-get update && \
 RUN python3 -m pip install --user pipx && \
     python3 -m pipx ensurepath
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+RUN python3 -m pip install pytest uv pre-commit
