--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,8 @@ fix = true
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
